--- a/src/index.css
+++ b/src/index.css
@@ -19,12 +19,16 @@ code {
 }
 
 .episodeButton {
-  border: 1px solid #e50914;
+  border: 1px solid #757575;
   flex: 1;
   display: flex;
   flex-direction: column;
   margin: 2px;
   border-radius: 5px;
+}
+
+.episodeButton-active {
+  border: 1px solid #e50914;
 }
 
 .episodeTitle {
@@ -33,10 +37,14 @@ code {
   color: white;
   flex: 1;
   padding: 20px;
-  background-color: #e50914;
+  background-color: #757575;
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+.episodeTitle-active {
+  background-color: #e50914;
 }
 
 .episodeDuration {
