--- a/src/index.css
+++ b/src/index.css
@@ -7,9 +7,59 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.App {
+  max-width: 960px;
+  margin: 0 auto;
+}
+
+h1 {
+  margin: 20px;
+}
+
+#screens-container {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 20px;
+}
+
+.screen {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  margin: 2px;
+  border-radius: 5px;
+  background-color: #383838;
+  color: white;
+}
+
+.screen .name {
+  text-transform: uppercase;
+  font-weight: bold;
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #787e7a;
+  color: white;
+  margin: 10px;
+  margin-bottom: 0;
+}
+
+.screen-mine {
+  background-color: #d9dddc;
+  color: #383838;
+  border: 1px solid #383838;
+}
+
+.screen-selected .name {
+  background-color: #7ac8fa;
+  color: #383838;
+}
+
+.screen .watching {
+  padding: 10px 20px;
+  font-size: 0.8em;
 }
 
 #episodes-container {
@@ -43,7 +93,7 @@ code {
   align-items: center;
 }
 
-.episode .title-selected {
+.episode-selected .title {
   background-color: #e50914;
 }
 
@@ -63,7 +113,6 @@ button {
 #start {
   margin: 20px;
   width: calc(100% - 40px);
-  max-width: 600px;
   background-color: #e50914;
   color: white;
   border-color: #e50914;
