--- a/src/index.css
+++ b/src/index.css
@@ -16,23 +16,29 @@ h1 {
   margin: 20px;
 }
 
-#screens-container {
+#tvs-container {
   display: flex;
   flex-wrap: wrap;
   padding: 20px;
 }
 
-.screen {
+.tv {
   flex: 1;
   display: flex;
   flex-direction: column;
   margin: 2px;
   border-radius: 5px;
   background-color: #383838;
-  color: white;
+  color: #d9dddc;
 }
 
-.screen .name {
+.tv-mine {
+  background-color: #d9dddc;
+  color: #383838;
+  border: 1px solid #383838;
+}
+
+.tv .screen {
   text-transform: uppercase;
   font-weight: bold;
   flex: 1;
@@ -41,23 +47,17 @@ h1 {
   justify-content: center;
   align-items: center;
   background-color: #787e7a;
-  color: white;
+  color: #d9dddc;
   margin: 10px;
   margin-bottom: 0;
 }
 
-.screen-mine {
-  background-color: #d9dddc;
-  color: #383838;
-  border: 1px solid #383838;
-}
-
-.screen-selected .name {
+.tv-watching .screen {
   background-color: #7ac8fa;
   color: #383838;
 }
 
-.screen .watching {
+.tv .bottomBar {
   padding: 10px 20px;
   font-size: 0.8em;
 }
