--- a/src/index.css
+++ b/src/index.css
@@ -122,3 +122,11 @@ button {
   background-color: #757575;
   border-color: #757575;
 }
+
+#stop {
+  margin: 20px;
+  width: calc(100% - 40px);
+  background-color: #e50914;
+  color: white;
+  border-color: #e50914;
+}
