--- a/src/index.css
+++ b/src/index.css
@@ -113,13 +113,12 @@ button {
 #start {
   margin: 20px;
   width: calc(100% - 40px);
-  background-color: #e50914;
-  color: white;
+  color: #e50914;
   border-color: #e50914;
 }
 
 #start:disabled {
-  background-color: #757575;
+  color: #757575;
   border-color: #757575;
 }
 
