--- a/src/index.css
+++ b/src/index.css
@@ -30,12 +30,12 @@ h1 {
   border-radius: 5px;
   background-color: #383838;
   color: #d9dddc;
+  border: 1px solid #383838;
 }
 
 .tv-mine {
   background-color: #d9dddc;
   color: #383838;
-  border: 1px solid #383838;
 }
 
 .tv .screen {
@@ -60,6 +60,16 @@ h1 {
 .tv .bottomBar {
   padding: 10px 20px;
   font-size: 0.8em;
+  line-height: 1.1em;
+  height: 2.2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tv .bottomBar p {
+  margin: 0;
 }
 
 #episodes-container {
