Make start watching section collapsible

--- a/src/index.css
+++ b/src/index.css
@@ -73,6 +73,15 @@ h1 {
   margin: 0;
 }
 
+#start-watching {
+  overflow: hidden;
+  transition: height ease 1s;
+}
+
+.collapsed {
+  /*height: 0;*/
+}
+
 #episodes-container {
   display: flex;
   flex-wrap: wrap;
@@ -139,4 +148,9 @@ button {
   background-color: #e50914;
   color: white;
   border-color: #e50914;
+}
+
+p#greetings {
+  margin: 0;
+  margin-top: 10px;
 }
