--- a/src/index.css
+++ b/src/index.css
@@ -29,15 +29,15 @@ h1 {
 }
 
 #tvs-container {
-  display: flex;
-  flex-wrap: wrap;
   padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
 .tv {
-  flex: 1;
   display: flex;
   flex-direction: column;
+  height: 180px;
   margin: 2px;
   border-radius: 5px;
   background-color: #383838;
@@ -54,7 +54,7 @@ h1 {
   text-transform: uppercase;
   font-weight: bold;
   flex: 1;
-  padding: 20px;
+  padding: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -91,16 +91,16 @@ h1 {
 }
 
 #episodes-container {
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   padding: 20px;
 }
 
 .episode {
   border: 1px solid #757575;
-  flex: 1;
   display: flex;
   flex-direction: column;
+  height: 120px;
   margin: 2px;
   border-radius: 5px;
 }
