--- a/src/index.css
+++ b/src/index.css
@@ -98,6 +98,7 @@ h1 {
 
 .episode {
   border: 1px solid #757575;
+  background-color: #757575;
   display: flex;
   flex-direction: column;
   height: 120px;
@@ -107,6 +108,7 @@ h1 {
 
 .episode-selected {
   border: 1px solid #e50914;
+  background-color: #e50914;
 }
 
 .episode .title {
@@ -115,18 +117,16 @@ h1 {
   color: white;
   flex: 1;
   padding: 20px;
-  background-color: #757575;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.episode-selected .title {
-  background-color: #e50914;
-}
-
 .episode .duration {
   padding: 10px 20px;
+  background-color: white;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
 }
 
 button {
