--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,161 @@
 .App {
+  max-width: 960px;
+  margin: 0 auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1 {
+  margin: 20px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+#watching-count p {
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+#watching-count p:first-child {
+  font-size: 1.3em;
+}
+
+#watching-count .red {
+  color: red;
+}
+
+#tvs-container {
+  padding: 20px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+}
+
+.tv {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  height: 180px;
+  margin: 2px;
+  border-radius: 5px;
+  background-color: #383838;
+  color: #d9dddc;
+  border: 1px solid #383838;
+}
+
+.tv-mine {
+  background-color: #d9dddc;
+  color: #383838;
+}
+
+.tv .screen {
+  text-transform: uppercase;
+  font-weight: bold;
+  flex: 1;
+  padding: 10px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  background-color: #787e7a;
+  color: #d9dddc;
+  margin: 10px;
+  margin-bottom: 0;
+}
+
+.tv-watching .screen {
+  background-color: #7ac8fa;
+  color: #383838;
+  box-shadow: 0 0 6px 2px #addfff;
+}
+
+.tv .bottomBar {
+  padding: 10px 20px;
+  font-size: 0.8em;
+  line-height: 1.1em;
+  height: 2.2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.tv .bottomBar p {
+  margin: 0;
+}
+
+#start-watching {
+  overflow: hidden;
+  transition: height ease 1s;
+}
+
+#episodes-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+  padding: 20px;
+}
+
+.episode {
+  border: 1px solid #595959;
+  background-color: #d9d9d9;
+  display: flex;
+  flex-direction: column;
+  height: 120px;
+  margin: 2px;
+  border-radius: 5px;
+}
+
+.episode-selected {
+  border: 1px solid #e50914;
+  background-color: #e50914;
+}
+
+.episode .title {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: #595959;
+  flex: 1;
+  padding: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.episode-selected .title {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.episode .duration {
+  padding: 10px 20px;
+  background-color: white;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  color: #595959;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button {
+  padding: 20px;
+  background-color: white;
+  color: black;
+  font-weight: bold;
+  border: 1px solid black;
+  border-radius: 5px;
+}
+
+#start {
+  margin: 20px;
+  width: calc(100% - 40px);
+  color: #e50914;
+  border-color: #e50914;
+}
+
+#start:disabled {
+  color: #757575;
+  border-color: #757575;
+}
+
+#stop {
+  margin: 20px;
+  width: calc(100% - 40px);
+  background-color: #e50914;
+  color: white;
+  border-color: #e50914;
+}
+
+p#greetings {
+  margin: 0;
+  margin-top: 10px;
 }
