--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,7 @@ h1 {
   flex-direction: column;
   height: 180px;
   margin: 2px;
-  border-radius: 5px;
+  border-radius: 8px;
   background-color: #383838;
   color: #d9dddc;
   border: 1px solid #383838;
@@ -95,7 +95,8 @@ h1 {
   flex-direction: column;
   height: 120px;
   margin: 2px;
-  border-radius: 5px;
+  border-radius: 8px;
+  overflow: hidden;
 }
 
 .episode-selected {
@@ -121,8 +122,6 @@ h1 {
 .episode .duration {
   padding: 10px 20px;
   background-color: white;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 4px;
   color: #595959;
 }
 
@@ -132,7 +131,7 @@ button {
   color: black;
   font-weight: bold;
   border: 1px solid black;
-  border-radius: 5px;
+  border-radius: 8px;
 }
 
 #start {
