--- a/src/App.css
+++ b/src/App.css
@@ -133,6 +133,19 @@ p#greetings {
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
 }
 
+.episode-customizer {
+  border: 1px solid #595959;
+  display: flex;
+  flex-direction: column;
+  height: 120px;
+  margin: 2px;
+  border-radius: 8px;
+  overflow: hidden;
+  justify-content: center;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+
 .episode {
   border: 1px solid #595959;
   background-color: #d9d9d9;
