Add running time button component

--- a/src/App.css
+++ b/src/App.css
@@ -179,7 +179,7 @@ p#greetings {
   color: white;
 }
 
-.episode .duration {
+.episode .runningTime {
   padding: 10px 20px;
   background-color: white;
   color: #595959;
