--- a/src/components/CustomRunningTimeButton.css
+++ b/src/components/CustomRunningTimeButton.css
@@ -10,3 +10,62 @@
   padding-right: 20px;
   padding-left: 20px;
 }
+
+.episode-customizer .time-slider {
+  -webkit-appearance: none;
+  width: 100%;
+  height: 30px;
+  background: #d9d9d9;
+  outline: none;
+  opacity: 0.7;
+  -webkit-transition: 0.2s;
+  transition: opacity 0.2s;
+  border-radius: 8px;
+}
+
+.episode-customizer .time-slider:hover {
+  opacity: 1;
+}
+
+.episode-customizer .time-slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 30px;
+  height: 30px;
+  background: #e50914;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.episode-customizer .time-slider::-moz-range-thumb {
+  width: 25px;
+  height: 25px;
+  background: #e50914;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.episode-customizer .bottom-part {
+  display: flex;
+  flex-direction: row;
+  margin-top: 10px;
+  height: 30px;
+}
+
+.episode-customizer .time-input {
+  padding: 0;
+  padding-left: 10px;
+  margin: 0;
+  min-width: 0px;
+  flex: 1;
+  border-radius: 8px;
+  border-width: 1px;
+}
+
+.episode-customizer button {
+  padding: 0;
+  height: 30px;
+  width: 30px;
+  margin-left: 10px;
+  border-radius: 15px;
+}
