--- a/src/components/CustomRunningTimeButton.css
+++ b/src/components/CustomRunningTimeButton.css
@@ -72,11 +72,11 @@
   width: 30px;
   margin-left: 10px;
   border-radius: 15px;
-  border-color: #e50914;
   background-color: #e50914;
+  border-color: #e50914;
 }
 
 .episode-customizer button:disabled {
-  background-color: #d9d9d9;
-  border-color: #757575;
+  background-color: #888888;
+  border-color: #888888;
 }
