--- a/src/App.css
+++ b/src/App.css
@@ -29,8 +29,7 @@ h1 {
 
 .grid-container > div,
 .grid-container > button {
-  margin-left: 2px;
-  margin-right: 2px;
+  margin: 2px;
 }
 
 /* Middle buttons */
